// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tagformat Array tag 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x \\tag{1}" display="block">
  <mtable displaystyle="true" data-latex="x \\tag{1}">
    <mlabeledtr>
      <mtd id="mjx-eqn:1">
        <mtext data-latex="\\text{|}">|</mtext>
        <mtext data-latex="\\text{1}">1</mtext>
        <mtext data-latex="\\text{|}">|</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{1}">x</mi>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Array tag with empty entry 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x \\tag{1}" display="block">
  <mtable displaystyle="true" data-latex="x \\tag{1}">
    <mlabeledtr>
      <mtd id="mjx-eqn:1">
        <mtext data-latex="\\text{1}">1</mtext>
        <mtext data-latex="\\text{.}">.</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{1}">x</mi>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Array tag with null entry 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x \\tag{1}" display="block">
  <mtable displaystyle="true" data-latex="x \\tag{1}">
    <mlabeledtr>
      <mtd id="mjx-eqn:1">
        <mtext data-latex="\\text{1}">1</mtext>
        <mtext data-latex="\\text{.}">.</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{1}">x</mi>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Basic tag 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x \\tag{1}" display="block">
  <mtable displaystyle="true" data-latex="x \\tag{1}">
    <mlabeledtr>
      <mtd id="my-tag:1">
        <mtext data-latex="\\text{[}">[</mtext>
        <mtext data-latex="\\text{1}">1</mtext>
        <mtext data-latex="\\text{]}">]</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{1}">x</mi>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Custom ref 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{align}x \\label{test}\\tag{x}\\\\ \\eqref{test} \\end{align}" display="block">
  <mtable displaystyle="true" columnalign="right" columnspacing="" rowspacing="3pt" data-break-align="bottom" data-latex="\\begin{align}x \\label{test}\\tag{x}\\\\ \\eqref{test} \\end{align}">
    <mlabeledtr>
      <mtd id="mjx-eqn:test">
        <mtext data-latex="\\text{(}">(</mtext>
        <mtext data-latex="\\text{x}">x</mtext>
        <mtext data-latex="\\text{)}">)</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{x}">x</mi>
      </mtd>
    </mlabeledtr>
    <mlabeledtr>
      <mtd id="mjx-eqn:1">
        <mtext data-latex="\\text{(}">(</mtext>
        <mtext data-latex="\\text{1}">1</mtext>
        <mtext data-latex="\\text{)}">)</mtext>
      </mtd>
      <mtd>
        <mrow href="#mjx-eqn%3Atest" class="MathJax_ref" data-latex="\\eqref{test}">
          <mtext>**x**</mtext>
        </mrow>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Eqref 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{align}x \\label{test}\\tag{x}\\\\ \\eqref{test} \\end{align}" display="block">
  <mtable displaystyle="true" columnalign="right" columnspacing="" rowspacing="3pt" data-break-align="bottom" data-latex="\\begin{align}x \\label{test}\\tag{x}\\\\ \\eqref{test} \\end{align}">
    <mlabeledtr>
      <mtd id="my-tag:test">
        <mtext data-latex="\\text{[}">[</mtext>
        <mtext data-latex="\\text{x}">x</mtext>
        <mtext data-latex="\\text{]}">]</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{x}">x</mi>
      </mtd>
    </mlabeledtr>
    <mlabeledtr>
      <mtd id="my-tag:A1">
        <mtext data-latex="\\text{[}">[</mtext>
        <mtext data-latex="\\text{A1}">A1</mtext>
        <mtext data-latex="\\text{]}">]</mtext>
      </mtd>
      <mtd>
        <mrow href="[[#my-tag%3Atest]]" class="MathJax_ref" data-latex="\\eqref{test}">
          <mtext>[x]</mtext>
        </mrow>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Ref 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="\\begin{align}x \\label{test}\\tag{x}\\\\ \\ref{test} \\end{align}" display="block">
  <mtable displaystyle="true" columnalign="right" columnspacing="" rowspacing="3pt" data-break-align="bottom" data-latex="\\begin{align}x \\label{test}\\tag{x}\\\\ \\ref{test} \\end{align}">
    <mlabeledtr>
      <mtd id="my-tag:test">
        <mtext data-latex="\\text{[}">[</mtext>
        <mtext data-latex="\\text{x}">x</mtext>
        <mtext data-latex="\\text{]}">]</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{x}">x</mi>
      </mtd>
    </mlabeledtr>
    <mlabeledtr>
      <mtd id="my-tag:A1">
        <mtext data-latex="\\text{[}">[</mtext>
        <mtext data-latex="\\text{A1}">A1</mtext>
        <mtext data-latex="\\text{]}">]</mtext>
      </mtd>
      <mtd>
        <mrow href="[[#my-tag%3Atest]]" class="MathJax_ref" data-latex="\\ref{test}">
          <mtext>x</mtext>
        </mrow>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;

exports[`Tagformat Text tag 1`] = `
"<math xmlns="http://www.w3.org/1998/Math/MathML" data-latex="x \\tag{x}" display="block">
  <mtable displaystyle="true" data-latex="x \\tag{x}">
    <mlabeledtr>
      <mtd id="my-tag:x">
        <mtext data-latex="\\text{[}">[</mtext>
        <mtext data-latex="\\text{x}">x</mtext>
        <mtext data-latex="\\text{]}">]</mtext>
      </mtd>
      <mtd>
        <mi data-latex="\\tag{x}">x</mi>
      </mtd>
    </mlabeledtr>
  </mtable>
</math>"
`;
